--- a/TodoListApp/app/build.gradle
+++ b/TodoListApp/app/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'de.keyboardsurfer.android.widget:crouton:1.8.5@aar'
+    compile 'net.the4thdimension:android-utils:2.0.4'
 }
